Fix related widget links icons size and vertical alignment.

--- a/admin_interface/static/admin_interface/css/widgets.css
+++ b/admin_interface/static/admin_interface/css/widgets.css
@@ -22,11 +22,27 @@
 /* fixed related widget and select2 */
 /* begin fix issue #10 - Related widget broken in long tabular inline */
 .admin-interface .related-widget-wrapper {
+    flex-wrap: nowrap;
     white-space: nowrap;
 }
 /* end fix */
 
-.admin-interface .related-widget-wrapper select + .related-widget-wrapper-link,
+/* fix related widget links icons size and vertical alignment */
+.admin-interface .related-widget-wrapper select + .related-widget-wrapper-link {
+    margin-left: 2px !important;
+}
+
+.admin-interface .related-widget-wrapper .related-widget-wrapper-link {
+    display: flex;
+    align-items: center;
+    margin-bottom: 4px;
+}
+.admin-interface .related-widget-wrapper .related-widget-wrapper-link img {
+    width: 16px;
+    height: 16px;
+}
+/* end fix */
+
 .admin-interface .related-widget-wrapper .select2-container + .related-widget-wrapper-link {
     margin-left: 12px !important;
 }
